--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		}
 	],
 	"require": {
-		"monolog/monolog": "^1.17"
+		"monolog/monolog": "^1.17|^2.0"
 	},
 	"autoload": {
 		"psr-4": {"Cumulati\\Monolog\\": "src/"}
