--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=8.0.0",
-        "monolog/monolog": "^1.17|^2.0"
+        "monolog/monolog": "^1.17|^2.0|^3.0"
     },
     "autoload": {
         "psr-4": {
